--- a/Toolkit/Mods/DnD5R_PactWeapons_7fb98b2d-3bed-fde8-e936-37ee0082fdef/Localization/English/english.xml
+++ b/Toolkit/Mods/DnD5R_PactWeapons_7fb98b2d-3bed-fde8-e936-37ee0082fdef/Localization/English/english.xml
@@ -214,8 +214,13 @@
   <content contentuid="h1867c328gfb52g4e83gd634g946454ac579f" version="1">Placeholder</content>
   <content contentuid="h289c83b1g38e8g430egff66g558ad108d8f1" version="1">Pact Weapon</content>
   <content contentuid="h6233721ag6382g9f22g95a4g6527eb5bc1d6" version="1">Placeholder</content>
-  <content contentuid="h5c575a3dgafd7gdfbdgff78gb645b718d4a7" version="1">Pact Weapon</content>
+  <content contentuid="h5c575a3dgafd7gdfbdgff78gb645b718d4a7" version="2">Pact Weapon: Necrotic Damage</content>
   <content contentuid="h089f38fbg8cf5g8427gb787g6c7a9674a2fa" version="1">Placeholder</content>
   <content contentuid="h9e8c5499ga4afg98dcgcc6eg1f51ec4bdf2b" version="1">Pact Weapon</content>
   <content contentuid="h314a4fc9g948eg38d3g93e7g4d8b2922c61b" version="1">Placeholder</content>
+  <content contentuid="h9cc1b492gaa4bg7885g6e76g74dc0352ade6" version="1">Damage Override</content>
+  <content contentuid="h82508f09gc057g5e8fg453ag8ee3f3c32ff4" version="1">Placeholder</content>
+  <content contentuid="hd93333d8gc0bdg5fe1g4aafg65e9c61c210b" version="1">Pact Weapon: Damage Override</content>
+  <content contentuid="hdf89183dgc497ga7d6g6801g533b3dcbcae3" version="1">Pact Weapon</content>
+  <content contentuid="hdb75636bg0e79g329dgd017g12f13fa05c39" version="1">Placeholder</content>
 </contentList>
