2024-12-25 - Add Progressions for Testing

--- a/Toolkit/Mods/DnD5R_PactWeapons_7fb98b2d-3bed-fde8-e936-37ee0082fdef/Localization/English/english.xml
+++ b/Toolkit/Mods/DnD5R_PactWeapons_7fb98b2d-3bed-fde8-e936-37ee0082fdef/Localization/English/english.xml
@@ -183,58 +183,30 @@
   <content contentuid="ha982f3a1ga3cbgc55agc19bgfb7bd7d9f0ff" version="1">Bind to your main hand ranged weapon. Its damage becomes magical, you cannot drop or throw it, and you become &lt;LSTag Tooltip="WeaponProficiency"&gt;Proficient&lt;/LSTag&gt; with it if you weren't already.</content>
   <content contentuid="h998ba25agb755g879egc8a6g30d69a805878" version="1">Bind Pact Weapon: </content>
   <content contentuid="hd6b666ceg315bgc997g0cb1gda46d2638eeb" version="2">Damage Pact Weapon</content>
-  <content contentuid="h5e8cca57g1b6cgbfe6g2374g6a15c3cb8385" version="3">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Necrotic, Psychic, or Radiant damage or its normal damage type.</content>
+  <content contentuid="h5e8cca57g1b6cgbfe6g2374g6a15c3cb8385" version="4">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Necrotic, Psychic, or Radiant damage or its normal damage type.</content>
   <content contentuid="h88dd6c3cg8ff9gf269g4596gc9c8f47b2ec3" version="1">Pact Weapon</content>
   <content contentuid="hec56f4a0gefd8g13fcg0d41gcd82ad06ec5a" version="1">The warlock bound to this weapon is always &lt;LSTag Tooltip="Proficiency"&gt;Proficient&lt;/LSTag&gt; with it. The weapon's damage is magical.</content>
-  <content contentuid="h39e9893ag88ebg20edgaf1bgc75add60fac0" version="2">Damage Override</content>
-  <content contentuid="h37069a5dg3e6cg632egc674g9e2ad075243c" version="1">Placeholder</content>
-  <content contentuid="h09ca199eg878bg932ag1038g0ba6da2d5f59" version="2">Damage Override</content>
-  <content contentuid="h99cdeedbga89agbe65gbfefg6b4dce139b28" version="1">Placeholder</content>
-  <content contentuid="h3cb0e006gb396g46b9g7fc7gf04623584dea" version="2">Damage Override</content>
-  <content contentuid="h6ed7864fg83b5g5e94g2bf6gc97fd800dc7d" version="1">Placeholder</content>
-  <content contentuid="h358db5f1ge8a2geb97g3957gb5f6c3f245e5" version="1">Damage Override</content>
-  <content contentuid="ha2b3749bgdbddge553g2a3bg612ab33a06d8" version="1">Placeholder</content>
-  <content contentuid="hbe6b0a5bgd4aeg4468gfb42g65b0a2801889" version="1">Damage Override</content>
-  <content contentuid="h64d04335gbaf4g6df6g79c4g433765af6d37" version="1">Placeholder</content>
-  <content contentuid="h0ea37ebcg8c36g8116g9b90g25f3228ff24d" version="1">Damage Override</content>
-  <content contentuid="h9fdc3754gd8b4gce97gf747gbc918dc82f94" version="1">Placeholder</content>
-  <content contentuid="hbbd5cabbg0faag14c2geddfg628cf82c2dc2" version="1">Damage Override</content>
-  <content contentuid="hab0cb542gfdbbg07d9g64fegcefe255f53b5" version="1">Placeholder</content>
-  <content contentuid="hba61c6ddg1473gc696gd9e3g16c9a6873d7c" version="1">Damage Override</content>
-  <content contentuid="h480a697fgded3gb164g7aefg206e25250f69" version="1">Placeholder</content>
-  <content contentuid="hfbc91278ge05fg3ce4g8957g62a4f18200df" version="1">Damage Override</content>
-  <content contentuid="ha1cc5bc1g44c7gbd7ege934g508f5cafc0e4" version="1">Placeholder</content>
-  <content contentuid="h7e42d7aegb070g71ebgd664g5c2b935a444a" version="1">Damage Override</content>
-  <content contentuid="h2d92dd6agcacbg0ff7g0152g3ba91d32b416" version="1">Placeholder</content>
-  <content contentuid="h2899ed5cg3d1dgcc9cgd043g1bf61dbb3556" version="1">Damage Override</content>
-  <content contentuid="h64ff83afg560agdbd2ga42bgd525552fb269" version="1">Placeholder</content>
-  <content contentuid="hfc302126gdf6cg54ccg3079g3ffc9c3a0d89" version="1">Damage Override</content>
-  <content contentuid="hecfd7f28g6535gfcedg3cb7g41d947be0a43" version="1">Placeholder</content>
-  <content contentuid="h7ae5ed1fg07d1ge18bgaaf8gda8930d87db8" version="1">Damage Override</content>
-  <content contentuid="h1867c328gfb52g4e83gd634g946454ac579f" version="1">Placeholder</content>
+  <content contentuid="h9e8c5499ga4afg98dcgcc6eg1f51ec4bdf2b" version="1">Pact Weapon</content>
+  <content contentuid="h9cc1b492gaa4bg7885g6e76g74dc0352ade6" version="1">Damage Override</content>
   <content contentuid="h289c83b1g38e8g430egff66g558ad108d8f1" version="2">Pact Weapon: Psychic Damage</content>
   <content contentuid="h6233721ag6382g9f22g95a4g6527eb5bc1d6" version="1">Placeholder</content>
   <content contentuid="h5c575a3dgafd7gdfbdgff78gb645b718d4a7" version="2">Pact Weapon: Necrotic Damage</content>
-  <content contentuid="h089f38fbg8cf5g8427gb787g6c7a9674a2fa" version="1">Placeholder</content>
-  <content contentuid="h9e8c5499ga4afg98dcgcc6eg1f51ec4bdf2b" version="1">Pact Weapon</content>
-  <content contentuid="h314a4fc9g948eg38d3g93e7g4d8b2922c61b" version="1">Placeholder</content>
-  <content contentuid="h9cc1b492gaa4bg7885g6e76g74dc0352ade6" version="1">Damage Override</content>
-  <content contentuid="h82508f09gc057g5e8fg453ag8ee3f3c32ff4" version="1">Placeholder</content>
   <content contentuid="hd93333d8gc0bdg5fe1g4aafg65e9c61c210b" version="1">Pact Weapon: Damage Override</content>
   <content contentuid="hdf89183dgc497ga7d6g6801g533b3dcbcae3" version="2">Pact Weapon: Radiant Damage</content>
   <content contentuid="hdb75636bg0e79g329dgd017g12f13fa05c39" version="1">Placeholder</content>
-  <content contentuid="hdb9c7e03g9a3cgb8acg80e4g573cc3e4bfc6" version="1">Radiant Pact Weapon</content>
-  <content contentuid="h428a149ag7b15g8738ge4eeg7ccdcf13b681" version="2">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Radiant damage.</content>
-  <content contentuid="h02523af0g61cege769g5966g5e4fb8eeafaf" version="1">Nectrotic Pact Weapon</content>
-  <content contentuid="h96c43309g5748gc5a5gc1feg66a033d65700" version="2">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Necrotic damage.</content>
-  <content contentuid="hbc0fb883g4d6fg10aag3735ged2f3857e77e" version="1">Psychic Pact Weapon</content>
-  <content contentuid="hf196335egf95bg286dg8989gfcfaac6c7197" version="2">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Psychic damage.</content>
+  <content contentuid="hdb9c7e03g9a3cgb8acg80e4g573cc3e4bfc6" version="2">Pact of the Blade: Radiant</content>
+  <content contentuid="h428a149ag7b15g8738ge4eeg7ccdcf13b681" version="3">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Radiant damage.</content>
+  <content contentuid="h02523af0g61cege769g5966g5e4fb8eeafaf" version="2">Pact of the Blade: Nectrotic</content>
+  <content contentuid="h96c43309g5748gc5a5gc1feg66a033d65700" version="3">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Necrotic damage.</content>
+  <content contentuid="hbc0fb883g4d6fg10aag3735ged2f3857e77e" version="2">Pact of the Blade: Psychic</content>
+  <content contentuid="hf196335egf95bg286dg8989gfcfaac6c7197" version="3">Whenever you attack with your &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt;, you can cause the weapon to deal Psychic damage.</content>
   <content contentuid="h94d96fa7g13c7g0e80gde3cg91bb58af8d46" version="1">%%% EMPTY</content>
   <content contentuid="h5d975f41g3796g0483ge7ebg2975419545a8" version="1">%%% EMPTY</content>
   <content contentuid="h2cc07ff2g7f67gadceg3458gba8328517492" version="1">Thirsting Blade</content>
-  <content contentuid="h989d8b8cg2b3egcd26g37c2gc521249be444" version="2">Can make an additional free attack after making a &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt; attack. If you gain the Extra Attack feature from more than one class, they don't add together.</content>
+  <content contentuid="h989d8b8cg2b3egcd26g37c2gc521249be444" version="3">Can make an additional free attack after making a &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt; attack. If you gain the Extra Attack feature from more than one class, they don't add together.</content>
   <content contentuid="h21f7569bgee2eg618bg0063gdaecba518fb0" version="1">Lifedrinker</content>
-  <content contentuid="hc430d1ccgc9c6gc6fag9239g2507529e974f" version="5">Once per turn, an attack made with your &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt; deals additional damage equal to your &lt;LSTag Tooltip="Charisma"&gt;Charisma&lt;/LSTag&gt; modifier. In addition, you gain [2] plus your &lt;LSTag Tooltip="Constitution"&gt;Constitution&lt;/LSTag&gt; modifier.</content>
+  <content contentuid="hc430d1ccgc9c6gc6fag9239g2507529e974f" version="6">Once per turn, an attack made with your &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt; deals additional damage equal to your &lt;LSTag Tooltip="Charisma"&gt;Charisma&lt;/LSTag&gt; modifier. In addition, you gain [2] plus your &lt;LSTag Tooltip="Constitution"&gt;Constitution&lt;/LSTag&gt; modifier.</content>
   <content contentuid="hf9b8ae38g53d8g1a69gbbcaga4f14cce7d02" version="1">Devouring Blade</content>
-  <content contentuid="h87d198dcgc19fgbb73g90d1g20444c9a0c2c" version="2">You can make two additional attacks after attacking with your &lt;LSTag Type="Status" Tooltip="PACT_BLADE"&gt;Pact Weapon&lt;/LSTag&gt;.</content>
+  <content contentuid="h87d198dcgc19fgbb73g90d1g20444c9a0c2c" version="3">You can make two additional attacks after attacking with your &lt;LSTag Type="Status" Tooltip="STATUS_DND5R_PACTBLADE"&gt;Pact Weapon&lt;/LSTag&gt;.</content>
+  <content contentuid="had541cf4ga8a9g491fga583g17c54bd435d9" version="3">Extra Attack</content>
 </contentList>
